--- a/sehrimstyle.css
+++ b/sehrimstyle.css
@@ -51,5 +51,38 @@
     top: 50%;
     left: 50%;
     transform:translate(-50%, -50%);
+    font-size: 25px;
+}
+.center h2{
+    margin-top: 80px;
+    margin-bottom: 50px;
     font-size: 30px;
 }
+ .cerceve{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   height: 100vh;
+   
+   
+}
+.cerceve .cesitligaleri{
+    width: 80%;
+    height: 100%;
+    overflow: hidden; 
+   
+}
+.cesitligaleri{
+    position: relative;
+    width: 400%;
+    left: 0; 
+}
+.cesitligaleri img{
+    width: 25%;
+    float: left;
+
+} 
+
