--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
     justify-items: center;
     align-items: 100vh;
     background-size: 100% 100%;
-    background-image: url("foto/mor.jpeg");
+    background-image: url("foto/sam1.jpeg");
+   
 
 
     background-size: cover;
