--- a/ilgialanlarim.css
+++ b/ilgialanlarim.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
 }
-.container{
+/* .container{
     background: url("foto/sam1.jpeg ");
      height: 100vh; 
     background-size: 100% 100%;
-}
+} */
 .container .navbar{
     width: 100%;
     height: 79px;
@@ -141,16 +141,4 @@
     margin: 5px;
     margin-top: 10px;
     
-}
-.ilkdiv{
-    width:95%; 
-    height: 80%;
-    margin-top:30px; 
-    /* margin-left: 100px;  */
-    font-size: large;
-}
-.ilkdiv h1{
-
-    text-align: center;
-    margin-right: 50px;
 }
