--- a/ilgialanlarim.css
+++ b/ilgialanlarim.css
@@ -26,7 +26,7 @@
     text-decoration: none;
     font-size: 35px;
 
-    color: white;
+    color: black;
 }
 .navbar ul li{
     list-style: none;
@@ -37,7 +37,7 @@
 }
 .navbar ul li a{
     text-decoration: none;
-     color: white;
+     color:black;
      font-size: 18px;
     
 }
@@ -67,24 +67,24 @@
     background-color:white;
     margin: 10px;
     float: left;
-    border: 1px solid #ccc;
+    border: none;
     overflow: scroll;
     margin-bottom: 20px;
    
 }
 
 .foto{
-    width:80%;
-    height:350px;
+    width:90%;
+    height:500px;
     margin: 15PX;
     margin-left:35px;
     margin-bottom: 10px;
 }
 .sehir1{
     position: relative;
-    width:80%;
-    height: 400px;
-    border:1px solid #ccc;
+    width:100%;
+    height: 600px;
+    border:none;
     margin: auto;
     overflow: hidden;
 }
@@ -107,29 +107,29 @@
         transform: translateX(0px);
     }
     10% {
-        transform: translateX(-1000px);
+        transform: translateX(-1300px);
     }
     20% {
-        transform: translateX(-1000px);
+        transform: translateX(-1300px);
     }
     30% {
-        transform: translateX(-2000px);
+        transform: translateX(-2600px);
     }
     40% {
-        transform: translateX(-2000px);
+        transform: translateX(-2600px);
     }
     50% {
-        transform: translateX(-3000px);
+        transform: translateX(-4000px);
     }
     60% {
-        transform: translateX(-3000px);
-    }
-    70% {
         transform: translateX(-4000px);
     }
-    80% {
-        transform: translateX(-4000px);
-    }
+    /* 70% {
+        transform: translateX(-4100px);
+    } */
+    /* 80% {
+        transform: translateX(-4200px);
+    } */
 }
 .sehir1 h3{
     text-align:center;
@@ -142,3 +142,52 @@
     margin-top: 10px;
     
 }
+ /* .kitap{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    padding: 15px;
+    display: flex;
+    align-items: flex-end;
+    transition: all 0.5s ease;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+}  */
+.kitap img{
+ width: 225px;
+ height: 300px;
+ margin-right: 50px;
+ /* transition: transform 0.3s ease; */
+ margin-bottom: 10px;
+ 
+ transition: all 0.5s ease;
+}
+#robert{
+    width: 300px;
+    height: 275px;
+}
+#sayf{
+    width: 250px;
+    
+}
+
+.kitap img:hover{
+     transform: scale(1);
+     filter: grayscale(100%); 
+    transform: scale(0.9);   
+}
+hr {
+    width: 300px; 
+    height: 10px;
+    background-color: red; 
+    border: none; 
+}
+.kitap h1{
+font-size: 60px;
+}
+
+ 
+
+
