--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     justify-items: center;
     align-items: 100vh;
     background-size: 100% 100%;
-    background-image: url("foto/sam1.jpeg");
+    background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg ");
    
 
 
