--- a/mirasimiz.css
+++ b/mirasimiz.css
@@ -1,61 +1,291 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.bgrd{
-    background-color: white;
-    /* height: 40%;
-    width: 100%; */
-}
-.container{
-    background-color: aqua;
-    margin-top: 600px;
-    
+
+.bgrd #miras {
+    color: #ccc;
+    margin-top: 300px;
+    margin-left: 30%;
+    font-size: 80px;
 
 }
-.container .navbar{
+
+.container {
+    background-color: white;
+    margin-top: 600px;
+
+
+}
+
+.container .navbar {
     width: 100%;
     height: 79px;
-   
+
 }
-.navbar .logo{
+
+.navbar .logo {
     display: inline-block;
     margin-left: 50px;
     margin-top: 20px;
 }
-.navbar ul{
+
+.navbar ul {
     float: right;
-    margin-right:30px ;
+    margin-right: 30px;
 
 }
-.navbar .logo a{
+
+.navbar .logo a {
     text-decoration: none;
     font-size: 35px;
 
     color: white;
 }
-.navbar ul li{
+
+.navbar ul li {
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     line-height: 80px;
-   
+
 }
-.navbar ul li a{
+
+.navbar ul li a {
     text-decoration: none;
-     color: white;
-     font-size: 18px;
-    
+    color: white;
+    font-size: 18px;
+
 }
-.navbar ul li a:hover{
+
+.navbar ul li a:hover {
     text-decoration: underline;
     background: rgb(14, 59, 95);
     border-radius: 5px;
 }
+
 .container .center {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform:translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     font-size: 30px;
 }
+
+.suriyemiras {
+    background-color: rgb(207, 202, 202);
+    width: 100%;
+    place-items: center;
+
+}
+
+.suriyemiras .yazi {
+    justify-content: center;
+margin-bottom: 100px;
+    h1 {
+        color: red;
+        font-size: 50px;
+        ;
+    }
+
+    hr {
+        width: 320px;
+        height: 4px;
+        background-color: black;
+
+    }
+}
+
+.ilkdiv {
+    margin-left: 28%;
+    padding-bottom: 50px;
+    padding-top: 100px;
+
+}
+.icerik ul li{
+    font-size: 30px;
+}
+.tadmur{
+    width: 100%;
+    align-items: center;
+    background-color: rgb(207, 202, 202);
+    
+    hr{
+        width: 320px;
+        height: 4px;
+        background-color: black;
+    }
+}
+.tadmur #baslik{
+    color: red;
+    font-size: 40px;
+   
+}
+#baslik1{
+    color: red;
+    font-size: 40px;
+    margin-right: 30px;
+}
+.baslik{
+    margin-left: 28%; 
+    margin-bottom: 100px;
+    margin-top: 50px;
+}
+#tadmur{
+    font-size: 30px;
+    margin-left: 20px;
+
+}
+#palmira{
+    font-size: 30px;
+    color: red; 
+}
+.tadmurdiv{
+    display: inline-block;
+    width: 50%;
+   
+   
+}
+.tadmurdiv  p{
+    font-size: 20px;
+  
+   
+}
+.tadmurfoto{
+    display: inline-block;
+    width:400px;
+    margin-left: 900px;
+    
+   
+    a{
+        display: inline;
+    }
+
+}
+.tadmurfoto a img{
+    display: inline-block;
+    width: 400px;
+    height: 200px;
+}
+.basinhakki{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(51, 1, 1);
+  }
+  
+  .basinhakki .dizayn span{
+    color: white;
+  }
+  .basinhakki .dizayn a{
+    color: yellow;
+    text-decoration: none;
+    display: inline;
+    transition: transform 0.2s;
+  }
+  .dizayn a {
+    font-size: 16px; /* Normal yazı boyutu */
+    transition: font-size 0.9s;
+  }
+  .basinhakki .dizayn a:hover{
+    color: rgb(161, 10, 161);
+    transform: scale(1.1);
+    font-size: 18px;
+  }
+  .dizayn{
+    padding-top: 40px;
+  }
+  .dizayn i{
+    color: white;
+  }
+  .sehir{
+    width:400px;
+    height: 600px ;
+    background-color: rgb(245, 233, 239);
+    margin: 10px;;
+    float: left;
+    border: 1px solid #ccc;
+    overflow: scroll;
+    margin-bottom: 20px;
+   
+}
+
+.foto{
+    width:80%;
+    height:250px;
+    margin: 15PX;
+    margin-left:35px;
+    margin-bottom: 10px;
+}
+.sehir1{
+    position: relative;
+    width: 400px;
+    height: 300px;
+    border:1px solid #ccc;
+    margin: auto;
+    overflow: hidden;
+}
+.sehir2{
+    position: absolute;
+    width: 400%;
+    left:0;
+    animation:slide 30s infinite;
+    margin-bottom: 20px;
+}
+.sehir3{
+    width: 25%;
+    float: left;
+    margin-bottom: 10px;
+}
+@keyframes slide{
+    0% {
+        transform: translateX(0px);
+    }
+    10% {
+        transform: translateX(-400px);
+    }
+    20% {
+        transform: translateX(-400px);
+    }
+    30% {
+        transform: translateX(-800px);
+    }
+    40% {
+        transform: translateX(-800px);
+    }
+    50% {
+        transform: translateX(-1200px);
+    }
+    60% {
+        transform: translateX(-1200px);
+    }
+    70% {
+        transform: translateX(-1600px);
+    }
+    80% {
+        transform: translateX(-1600px);
+    }
+}
+.sehir1 h3{
+    text-align:center;
+}
+.sehir p{
+    font-size:15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+    margin: 5px;
+    margin-top: 10px;
+    
+}
+.ilkdiv{
+    width:95%; 
+    height: 80%;
+    margin-top:30px; 
+    margin-left: 100px; 
+    font-size: large;
+}
+.ilkdiv h1{
+
+    text-align: center;
+    margin-right: 50px;
+}
+  
