--- a/anasayfastyle.css
+++ b/anasayfastyle.css
@@ -3,9 +3,9 @@
     padding: 0;
 }
 .container{
-    background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg ");
-     height: 100vh; 
-    background-size: 100% 100%;
+    background-color: white;
+    margin-top: 600px;
+    width: 100%;
 }
 .container .navbar{
     width: 100%;
@@ -53,4 +53,136 @@
     transform:translate(-50%, -50%);
     font-size: 30px;
 }
+.basinhakki{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(51, 1, 1);
+}
 
+.basinhakki .dizayn span{
+    color: white;
+}
+.basinhakki .dizayn a{
+    color: yellow;
+    text-decoration: none;
+    display: inline;
+    transition: transform 0.2s;
+}
+.dizayn a {
+    font-size: 16px; /* Normal yazı boyutu */
+    transition: font-size 0.9s;
+}
+.basinhakki .dizayn a:hover{
+    color: rgb(161, 10, 161);
+    transform: scale(1.1);
+    font-size: 18px;
+}
+.dizayn{
+    padding-top: 40px;
+}
+.dizayn i{
+    color: white;
+}
+.hakkimda{
+    width: 100%;
+}
+.foto{
+    display: inline-block;
+}
+.foto .konusma{
+    display: inline;
+    margin-bottom: 20px;
+    padding-top: -100px;
+   
+}
+.konusma p{
+    margin-left: 462px;
+   
+}
+.foto {
+    display: inline-block;
+    vertical-align: top; /* P elementlerini fotoğrafın üst kısmına hizalama */
+}
+
+.foto .konusma {
+    display: inline-block; /* Düzgün hizalanması için */
+    margin-left: 20px; /* Metin ile fotoğraf arasındaki boşluğu ayarlamak için */
+    vertical-align: center; /* P elementlerini fotoğrafın üst kısmına hizalama */
+    margin-top: 120px;
+}
+
+.konusma p {
+    margin-left: 0; /* Önceki büyük değerden çıkarıldı */
+   
+}
+
+.foto img {
+    border-radius: 5px;
+    width: 400px;
+    height: 400px;
+    margin-left: 60px;
+    vertical-align: top; /* Fotoğrafın üst kısmına hizalama */
+}
+
+.ilgialanlarim {
+    display: inline-block;
+    width: 210px;
+    height: 60px;
+    background-color: rgb(138, 2, 2);
+    border-radius: 10px;
+    border: 3px solid rgb(184, 27, 184);
+    margin-left: 60px;
+    font-size: 20px;
+    
+}
+
+.ilgialanlarim a {
+    color: white;
+    /* padding-top: 20px; */
+    text-decoration: none;
+    
+}
+
+.ilgialanlarim:hover {
+    background-color: white;
+}
+
+.ilgialanlarim:hover a {
+    color: black; /* Hover durumunda link rengini değiştirmek için */
+}
+.login{
+    width: 100%;
+    margin-top: 120px;
+    margin-left: 100px;
+}
+.text1{
+    font-size: 40px;
+    color: white;
+}
+.text2{
+
+    font-size: 70px;
+    color: white;
+}
+.text3{
+    font-size: 30px;
+    color: white;
+}
+.button{
+    width: 120px;
+    height: 60px;
+    background-color:rgb(116, 199, 116);
+    border-radius: 30px;
+}
+.button a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+.button:hover{
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid rgb(116, 199, 116); 
+}
+.button:hover a{
+color: yellow;
+}
