--- a/iletisim.css
+++ b/iletisim.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .container{
-    background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg ");
+    /* background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg "); */
      height: 100vh; 
     background-size: 100% 100%;
 }
@@ -26,7 +26,7 @@
     text-decoration: none;
     font-size: 35px;
 
-    color: white;
+    color: black;
 }
 .navbar ul li{
     list-style: none;
@@ -37,7 +37,7 @@
 }
 .navbar ul li a{
     text-decoration: none;
-     color: white;
+     color: black;
      font-size: 18px;
     
 }
@@ -52,4 +52,64 @@
     left: 50%;
     transform:translate(-50%, -50%);
     font-size: 30px;
+}
+.form{
+    width: 500px;
+    background-color: rgb(173, 18, 18);
+    border-radius: 10px;
+    height: 500px;
+   
+}
+.form table{
+   
+    height: 400px;
+}
+.form form{
+    font-size: 25px;
+
+}
+#text{
+    border-radius: 20px;
+}
+#gonder{
+  width: 150px;
+  height: 50px;  
+  border-radius: 30px;
+  border: 2px solid rgb(116, 47, 185);
+  background-color:rgb(116, 199, 116);
+}
+#gonder:hover{
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid rgb(116, 199, 116);
+}
+
+.basinhakki{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(51, 1, 1);
+}
+
+.basinhakki .dizayn span{
+    color: white;
+}
+.basinhakki .dizayn a{
+    color: yellow;
+    text-decoration: none;
+    display: inline;
+    transition: transform 0.2s;
+}
+.dizayn a {
+    font-size: 16px; /* Normal yazı boyutu */
+    transition: font-size 0.9s;
+}
+.basinhakki .dizayn a:hover{
+    color: rgb(161, 10, 161);
+    transform: scale(1.1);
+    font-size: 18px;
+}
+.dizayn{
+    padding-top: 40px;
+}
+.dizayn i{
+    color: white;
 }
