--- a/style.css
+++ b/style.css
@@ -4,20 +4,115 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
+* {
+    margin: 0;
+    padding: 0;
+}
+/* body{
+    background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg ");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    min-height:500px ;
+    height: 100vh;
+    
 
-body {
+} */
+.container {
+    background-color: white;
+   margin-top: 600px;
+   
+}
+.center{
+    width: 100%;
+    position: absolute;
+    top: 50%; /* Dikey olarak %50 konumlandır */
+    left: 50%; /* Yatay olarak %50 konumlandır */
+    transform: translate(-50%, -50%); 
+}
+.bgrd{
+    margin-top: 50px;
+    
+    
+}
+
+.container .navbar {
+    width: 100%;
+    height: 79px;
+
+}
+
+.navbar .logo {
+    display: inline-block;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+
+.navbar ul {
+    float: right;
+    margin-right: 30px;
+
+}
+
+.navbar .logo a {
+    text-decoration: none;
+    font-size: 35px;
+
+    color: black;
+}
+
+.navbar ul li {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    line-height: 80px;
+
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color:black;
+    font-size: 18px;
+
+}
+
+.navbar ul li a:hover {
+    text-decoration: underline;
+    background: rgb(14, 59, 95);
+    border-radius: 5px;
+}
+
+.container .center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
+}
+
+.center h1 {
+    margin-top: 50px;
+  margin-left: 25%;
+    font-size: 50px;
+    color: #ccc;
+}
+
+/* Slider */
+
+.accordion-header{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* body {
     display: flex;
     justify-content: center;
     justify-items: center;
     align-items: 100vh;
     background-size: 100% 100%;
-    background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg ");
-   
-
-
     background-size: cover;
     background-position: center;
-}
+} */
 
 .wrapper {
     width: 420px;
@@ -25,6 +120,7 @@ body {
     color: #fff;
     border-radius: 8px;
     padding: 30px 40px;
+    /* margin-left: 20%;  */
 }
 
 .wrapper h1 {
@@ -36,9 +132,6 @@ body {
     width: 200;
     height: 100;
     margin: 30px;
-  
-
-
 }
 
 .input_box input {
@@ -107,4 +200,34 @@ body {
 .register p a:hover {
     text-decoration: underline;
     color: red;
+}
+.basinhakki{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(51, 1, 1);
+}
+
+.basinhakki .dizayn span{
+    color: white;
+}
+.basinhakki .dizayn a{
+    color: yellow;
+    text-decoration: none;
+    display: inline;
+    transition: transform 0.2s;
+}
+.dizayn a {
+    font-size: 16px; /* Normal yazı boyutu */
+    transition: font-size 0.9s;
+}
+.basinhakki .dizayn a:hover{
+    color: rgb(161, 10, 161);
+    transform: scale(1.1);
+    font-size: 18px;
+}
+.dizayn{
+    padding-top: 40px;
+}
+.dizayn i{
+    color: white;
 }
