--- a/deneme.css
+++ b/deneme.css
@@ -1,8 +1,66 @@
-.carousel-item{
-width: 100%;
-height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap");
+:root{
+   --primary-color:#22254b;
+   --secondary-color:#373b69;     
 }
-.carousel-item img{
+*{
+    box-sizing: border-box;
+   
+}.api{
+    background: var(--primary-color);
+    font-family: 'Roboto',sans-serif;
+    margin: 0;
+
+}
+main{
+    display: flex;
+    flex-wrap: wrap;
+}
+.movie{
+    width: 300px;
+    margin: 1rem;
+    background: var(--secondary-color);
+    box-shadow: 0 4px 5px rgba(0,0,0,2);
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
+}
+.movie img{
     width: 100%;
-    height: 100vh;
-    }
+
+}.movie_info{
+    color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem 1rem 1rem;
+    letter-spacing: .5px;
+
+}
+.movie_info h3{
+    margin-top: 0;
+}
+.movie_info span{
+    background: var(--primary-color);
+    padding: .25rem .5rem;
+    border-radius: 3px;
+    font-weight: bold;
+}
+.movie_info span .green{
+    color: red;
+}
+.overview{
+    background: #fff;
+    padding: 2rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    max-height: 100%;
+    transform: translateY(101%);
+    transition: transform .3s ease-in;
+    cursor: pointer;
+}
+.movie:hover .overview{
+    transform: translateY(0);
+}
