--- a/iletisim.css
+++ b/iletisim.css
@@ -2,12 +2,16 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color:#eded ;
+}
 .container{
     /* background:linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url("foto/sam1.jpeg "); */
      height: 100vh; 
     background-size: 100% 100%;
 }
 .container .navbar{
+    
     width: 100%;
     height: 79px;
    
@@ -55,10 +59,11 @@
 }
 .form{
     width: 500px;
-    background-color: rgb(173, 18, 18);
+    background-color: rgb(214, 187, 218);
     border-radius: 10px;
-    height: 500px;
-   
+    height: 600px;
+    box-shadow: 5px 25px 30px 30px pink;
+
 }
 .form table{
    
@@ -66,7 +71,6 @@
 }
 .form form{
     font-size: 25px;
-
 }
 #text{
     border-radius: 20px;
